--- a/public/login.html
+++ b/public/login.html
@@ -11,19 +11,23 @@
     <title>Document</title>
 </head>
 <body>
+        <div class="container">
+                <!-- <h1 class="text-center">LOGIN</h1>
+                <div class="row">
+                    NOT YET SIGNED UP?
+                <a href="signup.html"><button class="btn btn-primary btn-sm">SIGNUP</button></a>
+                </div> -->
     
-            <div class="row form-group">
-                <div class="col-6">
-                    <button onclick="location.href = 'http://localhost:3300/signup';" class="btn btn-success form-control" id="signup">Signup</button>
+        <form method="POST" action="/login">
+                <div class="form-group">
+                  <label for="username">username</label>
+                  <input type="text" class="form-control" id="username" name="username"  placeholder="username">
+                
                 </div>
-                <div class="col-6">
-                    <button onclick="location.href = 'http://localhost:3300/login';" class="btn btn-success form-control" id="login">Login</button>
-                </div>
-            </div>
-        </div>
-
-
-   
-
-</body>
+                <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+                      </div>
+                      <button type="submit" class="btn btn-primary form-control">LOGIN</button>
+</form></body>
 </html>
