--- a/public/feeds.html
+++ b/public/feeds.html
@@ -19,10 +19,10 @@
 </head>
 <body>
     <div class='container'>
-            <div class="form-group">
+            <!-- <div class="form-group">
                     <label for="author">author</label>
                     <input type="text" class="form-control" id="author">
-             </div>
+             </div> -->
                   <div class="form-group">
                     <label for="content">CONTENT</label>
                     <input type="text" class="form-control" id="content">
