--- a/public/feeds.html
+++ b/public/feeds.html
@@ -23,6 +23,13 @@
                     <label for="author">author</label>
                     <input type="text" class="form-control" id="author">
              </div> -->
+             <div style="float:right">
+              <form align="right"  method="GET" action="/logout">
+               
+                <button  type="submit" id="logout"  class= "btn btn-danger">LOGOUT</button>
+                
+              </form>
+              </div>
                   <div class="form-group">
                     <label for="content">CONTENT</label>
                     <input type="text" class="form-control" id="content">
